--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -13,6 +13,8 @@ textarea {
   padding: 10px;
 }
 
+
+
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -24,6 +26,8 @@ textarea {
 .description {
   white-space: pre-wrap;
 }
+
+
 
 .time-block {
   text-align: center;
@@ -44,19 +48,30 @@ textarea {
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: rgb(0, 0, 0);
+}
+
+.past:focus{
+  background-color: #d3d3d3;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: rgb(0, 0, 0);
+}
+
+.present:focus{
+  background-color: #ff6961;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
+.future:focus{
+  background-color: #77dd77;
+}
 .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
